fix: downgrade to Java 17, fix workflow syntax, update consistency issues found in review
Co-authored-by: fidelisfelipe <925754+fidelisfelipe@users.noreply.github.com>
Agent-Logs-Url: https://github.com/fidelisfelipe/project-test-ai/sessions/f2f41a90-d9bd-45e2-ba18-4e072dd955dd